# python-practice

./: README.md  pyproject.toml
.github/workflows/: ci.yml
src/boggle/: boggle.py
src/hello/: main.py
tests/: test_hello_world.py
tests/test_boggle/: test_boggle.py
tests/test_hello/: test_hello.py
